--- a/index.html
+++ b/index.html
@@ -9,4 +9,252 @@
 
     <title>Laberra Innovación </title>
   </head>
-  </html>
+
+  <body>
+
+    <!-- HEADER -->
+    <div id="header_wrap" class="outer">
+        <header class="inner">
+          <a id="forkme_banner" href="https://github.com/erra/laberra">View on GitHub</a>
+
+          <h1 id="project_title">Laberra Innovación </h1>
+          <h2 id="project_tagline">Test de Aplicaciones - We.Boot</h2>
+
+            <section id="downloads">
+              <a class="zip_download_link" href="https://github.com/erra/laberra/zipball/master">Download this project as a .zip file</a>
+              <a class="tar_download_link" href="https://github.com/erra/laberra/tarball/master">Download this project as a tar.gz file</a>
+            </section>
+        </header>
+    </div>
+
+    <!-- MAIN CONTENT -->
+    <div id="main_content_wrap" class="outer">
+      <section id="main_content" class="inner">
+        <p># &gt; <strong>El pez de papel que aprendió a nadar</strong>.</p>
+
+<p>En una remota aldea de Japón , Dashinji, una maestra de origami, creó un bellísimo pez de papel. Este le dice que se siente solo y ella le construye todo un mundo de papel: un océano, algas marinas, un pulpo y otras criaturas. Mas el pez le ruega que lo deje libre en un océano de verdad, para sentir el roce del agua y conocer los misterios  de las profundidades. A regañadientes, la maestra se desprende de su creación  y lo deja libre  aunque está convencida  de que el pez  será destruido, ya que las cosas imaginarias deben quedarse en sitios imaginarios, sin embargo, y para sorpresa suya, el pez se vuelve real y parte de algo mucho más grande de lo que la maestra hubiera podido imaginarse. ¡Quiero el mar de verdad! -grito el pez- confía en mí y me volveré tan real y tan lleno de sangre y espinas como cualquier pez que nada en las profundidades del océano.</p>
+
+<p><a href="http://books.google.cl/books?id=oiypxtt1s3gC&amp;printsec=frontcover&amp;source=gbs_ge_summary_r&amp;cad=0#v=onepage&amp;q&amp;f=false">Jonathon A. Flaum.</a></p>
+
+<blockquote>
+<blockquote>
+<h3>
+<a name="prueba-que-las-grandes-ideas-superan-a-sus-creadores-y-adquieren-vida-propia-siempre-que-se-prueben-en-el-mundo-real-rriveros-roberto-riveros" class="anchor" href="#prueba-que-las-grandes-ideas-superan-a-sus-creadores-y-adquieren-vida-propia-siempre-que-se-prueben-en-el-mundo-real-rriveros-roberto-riveros"><span class="octicon octicon-link"></span></a>Prueba que las grandes ideas superan a sus creadores y adquieren vida propia, siempre que se prueben en el mundo real. [<a href="https://github.com/rriveros" class="user-mention">@rriveros</a> ##roberto riveros]</h3>
+</blockquote>
+</blockquote>
+
+<p>**SETS DE DATOS **</p>
+
+<blockquote>
+<blockquote>
+<h3>
+<a name="web-scraping" class="anchor" href="#web-scraping"><span class="octicon octicon-link"></span></a><a href="http://es.wikipedia.org/wiki/Web_scraping">Web Scraping</a>.</h3>
+</blockquote>
+</blockquote>
+
+<p>A continuación una lista de sets de datos.</p>
+
+<h1>
+<a name="-elecciones-votaciones-congreso-proyectos-de-ley-" class="anchor" href="#-elecciones-votaciones-congreso-proyectos-de-ley-"><span class="octicon octicon-link"></span></a>&gt; **Elecciones, votaciones Congreso, proyectos de ley **</h1>
+
+<ul>
+<li>Resultados Electorales de Chile <a href="http://sitio.servel.cl/controls/neochannels/neo_ch44/neochn44.aspx">http://sitio.servel.cl/controls/neochannels/neo_ch44/neochn44.aspx</a><br>
+</li>
+<li>Ingresos y Gastos Electorales de Candidatos en Chile (2004 en adelante) <a href="http://sitio.servel.cl/controls/neochannels/neo_ch144/neochn144.aspx?appinstanceid=379&amp;pubid=737">http://sitio.servel.cl/controls/neochannels/neo_ch144/neochn144.aspx?appinstanceid=379&amp;pubid=737</a> </li>
+<li>Ingresos y Gastos Electorales de Partidos en Chile (2004 en adelante)
+<a href="http://sitio.servel.cl/controls/neochannels/neo_ch144/neochn144.aspx?appinstanceid=381&amp;pubid=819">http://sitio.servel.cl/controls/neochannels/neo_ch144/neochn144.aspx?appinstanceid=381&amp;pubid=819</a> </li>
+<li>Votaciones en la Cámara de Diputados <a href="http://camara.cl/trabajamos/sala_votaciones.aspx">http://camara.cl/trabajamos/sala_votaciones.aspx</a> </li>
+<li>Votaciones en el Senado <a href="http://www.senado.cl/appsenado/index.php?mo=sesionessala&amp;ac=votacionSala&amp;legiini=462">http://www.senado.cl/appsenado/index.php?mo=sesionessala&amp;ac=votacionSala&amp;legiini=462</a> </li>
+<li>Tramitación de Proyectos de Ley en el Congreso <a href="http://sil.congreso.cl/pags/index.html">http://sil.congreso.cl/pags/index.html</a> </li>
+<li>Reseñas Parlamentarias <a href="http://historiapolitica.bcn.cl/resenas_parlamentarias">http://historiapolitica.bcn.cl/resenas_parlamentarias</a> </li>
+<li>Historia Política Legislativa <a href="http://historiapolitica.bcn.cl/">http://historiapolitica.bcn.cl/</a> </li>
+<li>Datasets de Normas Jurídicas y Cargos Públicos <a href="http://datos.bcn.cl/es/documentacion/conjunto-de-datos">http://datos.bcn.cl/es/documentacion/conjunto-de-datos</a>
+</li>
+</ul><h1>
+<a name="-divisin-territorial" class="anchor" href="#-divisin-territorial"><span class="octicon octicon-link"></span></a>&gt; <strong>División Territorial</strong>
+</h1>
+
+<ul>
+<li>División Político Administrativa <a href="http://siit2.bcn.cl/siit/nuestropais/div_pol-adm.htm">http://siit2.bcn.cl/siit/nuestropais/div_pol-adm.htm</a> </li>
+<li>División Político Electoral <a href="http://siit2.bcn.cl/divisionelectoral/index.htm">http://siit2.bcn.cl/divisionelectoral/index.htm</a>
+</li>
+<li>Sistema de Información Territorial de la Biblioteca del Congreso Nacional 
+<a href="http://siit.bcn.cl/siit/ui/pages/Mapa.aspx?home=home">http://siit.bcn.cl/siit/ui/pages/Mapa.aspx?home=home</a><br>
+</li>
+<li>Datos estadísticos por comuna de Chile (Censo) <a href="http://siit.bcn.cl/siit/ui/pages/Statistics.aspx">http://siit.bcn.cl/siit/ui/pages/Statistics.aspx</a> </li>
+<li>Datasets de Normas Jurídicas, Localidades y Cargos Públicos <a href="http://datos.bcn.cl/es/documentacion/conjunto-de-datos">http://datos.bcn.cl/es/documentacion/conjunto-de-datos</a>
+</li>
+</ul><h1>
+<a name="-educacin" class="anchor" href="#-educacin"><span class="octicon octicon-link"></span></a>&gt; <strong>Educación</strong>
+</h1>
+
+<ul>
+<li>Educación Superior <a href="http://www.mifuturo.cl/index.php/bases-de-datos">http://www.mifuturo.cl/index.php/bases-de-datos</a> </li>
+<li>Educación en general <a href="http://datos.gob.cl/categorias/ver/5">http://datos.gob.cl/categorias/ver/5</a> </li>
+<li>Georeferenciacion de escuelas y liceos <a href="http://datos.gob.cl/datasets/ver/448">http://datos.gob.cl/datasets/ver/448</a> I <a href="http://www.mineduc.cl/index1_int.php?id_portal=1&amp;id_seccion=3260&amp;id_contenido=13262">http://www.mineduc.cl/index1_int.php?id_portal=1&amp;id_seccion=3260&amp;id_contenido=13262</a> </li>
+<li>Presupuesto Nacional en Educación <a href="http://www.dipres.gob.cl/595/w3-propertyvalue-14437.html">http://www.dipres.gob.cl/595/w3-propertyvalue-14437.html</a> </li>
+<li>Subvenciones a Colegios Particulares Subvencionados <a href="http://www.mineduc.cl/transparencia/otras_transferencias.html">http://www.mineduc.cl/transparencia/otras_transferencias.html</a> </li>
+<li>Estadísticas Universitarias de Pregrado <a href="http://www.cned.cl/public/Secciones/SeccionIndicesEstadisticas/indices_estadisticas_sistema.aspx">http://www.cned.cl/public/Secciones/SeccionIndicesEstadisticas/indices_estadisticas_sistema.aspx</a> </li>
+<li>Estadísticas Universitarias Posgrado <a href="http://www.cned.cl/public/Secciones/SeccionIndicesEstadisticas/indices_estadisticas_posgrado.aspx">http://www.cned.cl/public/Secciones/SeccionIndicesEstadisticas/indices_estadisticas_posgrado.aspx</a><br>
+</li>
+<li>Universidades en Chile <a href="http://www.cned.cl/public/Secciones/SeccionIndicesEstadisticas/indices_estadisticas_instituciones.aspx?opcBusquedaCSE=9_3_3">http://www.cned.cl/public/Secciones/SeccionIndicesEstadisticas/indices_estadisticas_instituciones.aspx?opcBusquedaCSE=9_3_3</a> </li>
+<li>Centros de Formación Técnica en Chile <a href="http://www.cned.cl/public/Secciones/SeccionIndicesEstadisticas/indices_estadisticas_instituciones.aspx?opcBusquedaCSE=9_3_2">http://www.cned.cl/public/Secciones/SeccionIndicesEstadisticas/indices_estadisticas_instituciones.aspx?opcBusquedaCSE=9_3_2</a> </li>
+</ul><h1>
+<a name="-compras-pblicas-y-sueldos-de-gobierno" class="anchor" href="#-compras-pblicas-y-sueldos-de-gobierno"><span class="octicon octicon-link"></span></a>&gt; <strong>Compras Públicas y Sueldos de Gobierno</strong>
+</h1>
+
+<ul>
+<li>Licitaciones Adjudicadas <a href="http://www.analiza.cl/web/Modulos/Reportes/ReporteDiarios.aspx">http://www.analiza.cl/web/Modulos/Reportes/ReporteDiarios.aspx</a> </li>
+<li>Ordenes de Compra Adjudicadas <a href="http://www.analiza.cl/web/Modulos/Reportes/ReporteOC.aspx">http://www.analiza.cl/web/Modulos/Reportes/ReporteOC.aspx</a> I<br><a href="http://www.analiza.cl/web/Informacion_del_Mercado/Informes_de_gestion/Informe_gestion_febrero_2013.pdf">http://www.analiza.cl/web/Informacion_del_Mercado/Informes_de_gestion/Informe_gestion_febrero_2013.pdf</a> </li>
+<li>Data de sueldos de Gobierno Transparente Chile <a href="http://www.gobiernotransparentechile.cl">www.gobiernotransparentechile.cl</a>
+</li>
+</ul><h1>
+<a name="-presupuesto-de-la-nacin" class="anchor" href="#-presupuesto-de-la-nacin"><span class="octicon octicon-link"></span></a>&gt; <strong>Presupuesto de la Nación</strong>
+</h1>
+
+<ul>
+<li>Presupuesto 2013 (en ejecución) <a href="http://www.dipres.gob.cl/594/w3-propertyvalue-21754.html">http://www.dipres.gob.cl/594/w3-propertyvalue-21754.html</a> </li>
+<li>Presupuesto por Entidad de Gobierno <a href="http://www.dipres.gob.cl/595/w3-propertyname-557.html">http://www.dipres.gob.cl/595/w3-propertyname-557.html</a> </li>
+</ul><h1>
+<a name="-exportaciones-de-chile-" class="anchor" href="#-exportaciones-de-chile-"><span class="octicon octicon-link"></span></a>&gt; **Exportaciones de Chile **</h1>
+
+<ul>
+<li>Estadísticas de Exportaciones Aduanas <a href="http://www.aduana.cl/exportaciones/aduana/2007-04-16/165951.html">http://www.aduana.cl/exportaciones/aduana/2007-04-16/165951.html</a> </li>
+</ul><h1>
+<a name="-banco-central-" class="anchor" href="#-banco-central-"><span class="octicon octicon-link"></span></a>&gt; **Banco Central **</h1>
+
+<ul>
+<li>Estadísticas Económicas <a href="http://www.bcentral.cl/estadisticas-economicas/index.htm">http://www.bcentral.cl/estadisticas-economicas/index.htm</a> </li>
+</ul><h1>
+<a name="-contralora-general-de-la-repblica" class="anchor" href="#-contralora-general-de-la-repblica"><span class="octicon octicon-link"></span></a>&gt; <strong>Contraloría General de la República</strong>
+</h1>
+
+<ul>
+<li>Dictámenes relevantes <a href="http://www.contraloria.cl/NewPortal2/portal2/appmanager/portalCGR/v3ESP?_nfpb=true&amp;_pageLabel=P18200239681286226265111">http://www.contraloria.cl/NewPortal2/portal2/appmanager/portalCGR/v3ESP?_nfpb=true&amp;_pageLabel=P18200239681286226265111</a> </li>
+<li>Últimas Auditorías <a href="http://www.contraloria.cl/NewPortal2/portal2/appmanager/portalCGR/v3ESP?_nfpb=true&amp;_pageLabel=P18200239681286226265111">http://www.contraloria.cl/NewPortal2/portal2/appmanager/portalCGR/v3ESP?_nfpb=true&amp;_pageLabel=P18200239681286226265111</a>
+</li>
+</ul><h1>
+<a name="-telecomunicaciones" class="anchor" href="#-telecomunicaciones"><span class="octicon octicon-link"></span></a>&gt; <strong>Telecomunicaciones</strong>
+</h1>
+
+<ul>
+<li>Data de telecomunicaciones Subtel <a href="http://www.subtel.gob.cl/index.php?option=com_content&amp;view=article&amp;id=2486:informacion-estadistica&amp;catid=133:informacion-estadistica-actualizada-e-historica&amp;Itemid=337">http://www.subtel.gob.cl/index.php?option=com_content&amp;view=article&amp;id=2486:informacion-estadistica&amp;catid=133:informacion-estadistica-actualizada-e-historica&amp;Itemid=337</a> </li>
+</ul><h1>
+<a name="-transportes" class="anchor" href="#-transportes"><span class="octicon octicon-link"></span></a>&gt; <strong>Transportes</strong>
+</h1>
+
+<ul>
+<li>Estadísticas mensuales de tráfico aéreo, puntualidad y regularidad <a href="http://www.jac-chile.cl/estadisticas/15-informes-estadisticos-mensuales-del-trafico-aereo.html">http://www.jac-chile.cl/estadisticas/15-informes-estadisticos-mensuales-del-trafico-aereo.html</a> </li>
+<li>Estadísticas mensuales de transporte de pasajeros de Metro, Ferrocarriles, Plazas de Peaje, Pórticos y Movimiento Internacional de pasajeros. 
+<a href="http://www.ine.cl/canales/chile_estadistico/estadisticas_economicas/transporte_y_comunicaciones/transporte_y_comunicaciones.php">http://www.ine.cl/canales/chile_estadistico/estadisticas_economicas/transporte_y_comunicaciones/transporte_y_comunicaciones.php</a> </li>
+</ul><h1>
+<a name="-vivienda" class="anchor" href="#-vivienda"><span class="octicon octicon-link"></span></a>&gt; <strong>Vivienda</strong>
+</h1>
+
+<ul>
+<li>-Generador de datos de vivienda (permite usar filtros y genera archivo Excel)<br><a href="http://www.observatoriohabitacional.cl/opensite_20080314092954.aspx">http://www.observatoriohabitacional.cl/opensite_20080314092954.aspx</a> </li>
+<li>Mercado inmobiliario <a href="http://www.observatoriohabitacional.cl/opensite_20080122171157.aspx">http://www.observatoriohabitacional.cl/opensite_20080122171157.aspx</a> </li>
+<li>Información georeferenciada de inversión y programas de subsidios de Vivienda <a href="http://www.observatoriourbano.cl/inversiones/info_georref.asp">http://www.observatoriourbano.cl/inversiones/info_georref.asp</a> </li>
+<li>Déficit habitacional por Quintil y Región <a href="http://www.observatoriohabitacional.cl/opensite_20080122171214.aspx">http://www.observatoriohabitacional.cl/opensite_20080122171214.aspx</a>
+</li>
+</ul><h1>
+<a name="-minera" class="anchor" href="#-minera"><span class="octicon octicon-link"></span></a>&gt; <strong>Minería</strong>
+</h1>
+
+<ul>
+<li>Data de mineras en Chile <a href="http://datos.gob.cl/datasets/ver/2740">http://datos.gob.cl/datasets/ver/2740</a> </li>
+<li>Estadísticas de Producción Minera, Concesiones Mineras, Accidentabilidad Minera <a href="http://www.sernageomin.cl/sminera-estadisticas.php">http://www.sernageomin.cl/sminera-estadisticas.php</a>
+</li>
+</ul><h1>
+<a name="-pesca" class="anchor" href="#-pesca"><span class="octicon octicon-link"></span></a>&gt; <strong>Pesca</strong>
+</h1>
+
+<ul>
+<li>Indicadores Sector Pesquero <a href="http://siit2.bcn.cl/indicadores/pesca">http://siit2.bcn.cl/indicadores/pesca</a>
+</li>
+</ul><h1>
+<a name="-recursos-naturales" class="anchor" href="#-recursos-naturales"><span class="octicon octicon-link"></span></a>&gt; <strong>Recursos Naturales</strong>
+</h1>
+
+<ul>
+<li>Indicadores sector Recursos Naturales <a href="http://siit2.bcn.cl/indicadores/natural">http://siit2.bcn.cl/indicadores/natural</a>
+</li>
+</ul><h1>
+<a name="-banca" class="anchor" href="#-banca"><span class="octicon octicon-link"></span></a>&gt; <strong>Banca</strong>
+</h1>
+
+<ul>
+<li>Lista de bancos que operan en Chile y sus fichas<br><a href="http://www.sbif.cl/sbifweb/servlet/ConozcaSBIF?indice=7.5.1.1&amp;idContenido=483">http://www.sbif.cl/sbifweb/servlet/ConozcaSBIF?indice=7.5.1.1&amp;idContenido=483</a> </li>
+</ul><h1>
+<a name="-valores-y-seguros" class="anchor" href="#-valores-y-seguros"><span class="octicon octicon-link"></span></a>&gt; <strong>Valores y Seguros</strong>
+</h1>
+
+<ul>
+<li>Principales Grupos Económicos de Chile <a href="http://www.svs.cl/sitio/mercados/grupos.php">http://www.svs.cl/sitio/mercados/grupos.php</a>
+</li>
+</ul><h1>
+<a name="-salud" class="anchor" href="#-salud"><span class="octicon octicon-link"></span></a>&gt; <strong>Salud</strong>
+</h1>
+
+<ul>
+<li>Ranking de Isapres <a href="http://ranking.supersalud.gob.cl/574/w3-channel.html">http://ranking.supersalud.gob.cl/574/w3-channel.html</a> </li>
+</ul><h1>
+<a name="-energa" class="anchor" href="#-energa"><span class="octicon octicon-link"></span></a>&gt; <strong>Energía</strong>
+</h1>
+
+<ul>
+<li>-Cifras mensuales de generación y distribución de la energía eléctrica 
+<a href="http://www.ine.cl/canales/chile_estadistico/estadisticas_economicas/energia/series_estadisticas/series_estadisticas.php">http://www.ine.cl/canales/chile_estadistico/estadisticas_economicas/energia/series_estadisticas/series_estadisticas.php</a>
+</li>
+</ul><h1>
+<a name="-calidad-del-aire" class="anchor" href="#-calidad-del-aire"><span class="octicon octicon-link"></span></a>&gt; <strong>Calidad del Aire</strong>
+</h1>
+
+<ul>
+<li><p><a href="http://sinca.mma.gob.cl/">http://sinca.mma.gob.cl/</a></p></li>
+<li><p><a href="http://macam.mma.gob.cl/calidaddeaire/">http://macam.mma.gob.cl/calidaddeaire/</a></p></li>
+</ul><h1>
+<a name="-terremoto-27f" class="anchor" href="#-terremoto-27f"><span class="octicon octicon-link"></span></a>&gt; <strong>Terremoto 27/F</strong>
+</h1>
+
+<ul>
+<li>-Estado Infraestructura Habitacional y Hospitalaria <a href="http://siit2.bcn.cl/actualidad-territorial/terremoto_chile-infraestructura_hospitalaria">http://siit2.bcn.cl/actualidad-territorial/terremoto_chile-infraestructura_hospitalaria</a> </li>
+</ul><h1>
+<a name="-ocde" class="anchor" href="#-ocde"><span class="octicon octicon-link"></span></a>&gt; <strong>OCDE</strong>
+</h1>
+
+<ul>
+<li>Estadísticas comparadas de Chile y otros países OCDE <a href="http://www.oecd-ilibrary.org/statistics">http://www.oecd-ilibrary.org/statistics</a>
+</li>
+</ul><h1>
+<a name="-worldbank-open-data-catalog-" class="anchor" href="#-worldbank-open-data-catalog-"><span class="octicon octicon-link"></span></a>&gt; **WorldBank Open Data Catalog **</h1>
+
+<ul>
+<li>Estadísticas y sets de datos de Chile <a href="http://data.worldbank.org/country/chile">http://data.worldbank.org/country/chile</a> I <a href="http://databank.bancomundial.org/data/views/reports/tableview.aspx">http://databank.bancomundial.org/data/views/reports/tableview.aspx</a>
+</li>
+</ul><hr>
+      </section>
+    </div>
+
+    <!-- FOOTER  -->
+    <div id="footer_wrap" class="outer">
+      <footer class="inner">
+        <p class="copyright">Laberra Innovación  maintained by <a href="https://github.com/erra">erra</a></p>
+        <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
+      </footer>
+    </div>
+
+              <script type="text/javascript">
+            var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
+            document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
+          </script>
+          <script type="text/javascript">
+            try {
+              var pageTracker = _gat._getTracker("roberto riveros , @rriveros , lyd");
+            pageTracker._trackPageview();
+            } catch(err) {}
+          </script>
+
+
+  </body>
+</html>
