--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset='utf-8' />
     <meta http-equiv="X-UA-Compatible" content="chrome=1" />
-    <meta name="description" content="Laberra Innovación  : Test de Aplicaciones - We.Boot" />
+    <meta name="description" content="Erralab.Space Innovación  : Test de Aplicaciones - We.Boot" />
 
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
