--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
     <!-- FOOTER  -->
     <div id="footer_wrap" class="outer">
       <footer class="inner">
-        <p class="copyright">Laberra Innovación  maintained by <a href="https://github.com/erra">erra</a></p>
+        <p class="copyright">Laberra Innovación  maintained by <a href="https://github.com/rriveros">erra</a></p>
         <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
       </footer>
     </div>
