--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="chrome=1" />
     <meta name="description" content="Erralab.Space Innovación  : Test de Aplicaciones - We.Boot" />
 
-    <link rel="stylesheet" type="text/css" media="screen" href="../stylesheets/stylesheet.css">
+    <link rel="stylesheet" type="text/css" media="screen" href="https://rriveros.github.io/stylesheets/stylesheet.css">
 
     <title>Laberra Innovación </title>
   </head>
