--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="chrome=1" />
     <meta name="description" content="Erralab.Space Innovación  : Test de Aplicaciones - We.Boot" />
 
-    <link rel="stylesheet" type="text/css" media="screen" href="https://rriveros.github.io/stylesheets/stylesheet.css">
+    <link rel="stylesheet" type="text/css" media="screen" href="../stylesheets/stylesheet.css">
 
     <title>Laberra Innovación </title>
   </head>
@@ -15,14 +15,14 @@
     <!-- HEADER -->
     <div id="header_wrap" class="outer">
         <header class="inner">
-          <a id="forkme_banner" href="https://github.com/rriveros/rriveros">View on GitHub</a>
+          <a id="forkme_banner" href="https://github.com/rriveros">View on GitHub</a>
 
           <h1 id="project_title">Laberra Innovación </h1>
           <h2 id="project_tagline">Test de Aplicaciones - We.Boot</h2>
 
             <section id="downloads">
-              <a class="zip_download_link" href="https://github.com/erra/laberra/zipball/master">Download this project as a .zip file</a>
-              <a class="tar_download_link" href="https://github.com/erra/laberra/tarball/master">Download this project as a tar.gz file</a>
+              <a class="zip_download_link" href="https://github.com/rriveros/zipball/master">Download this project as a .zip file</a>
+              <a class="tar_download_link" href="https://github.com/rriveros/tarball/master">Download this project as a tar.gz file</a>
             </section>
         </header>
     </div>
