--- a/index.html
+++ b/index.html
@@ -58,11 +58,11 @@
 <a name="-elecciones-votaciones-congreso-proyectos-de-ley-" class="anchor" href="#-elecciones-votaciones-congreso-proyectos-de-ley-"><span class="octicon octicon-link"></span></a>&gt; **Elecciones, votaciones Congreso, proyectos de ley **</h1>
 
 <ul>
-<li>Resultados Electorales de Chile <a href="http://sitio.servel.cl/controls/neochannels/neo_ch44/neochn44.aspx">http://sitio.servel.cl/controls/neochannels/neo_ch44/neochn44.aspx</a><br>
+<li>Resultados Electorales de Chile <a href="https://servel.cl/estadisticas-2/">Servel</a><br>
 </li>
-<li>Ingresos y Gastos Electorales de Candidatos en Chile (2004 en adelante) <a href="http://sitio.servel.cl/controls/neochannels/neo_ch144/neochn144.aspx?appinstanceid=379&amp;pubid=737">http://sitio.servel.cl/controls/neochannels/neo_ch144/neochn144.aspx?appinstanceid=379&amp;pubid=737</a> </li>
+<li>Ingresos y Gastos Electorales de Candidatos en Chile (2004 en adelante) <a href="https://www.servel.cl/ingresos-y-gastos-de-candidatos/">Ingreso y Gastos de Candidatos</a> </li>
 <li>Ingresos y Gastos Electorales de Partidos en Chile (2004 en adelante)
-<a href="http://sitio.servel.cl/controls/neochannels/neo_ch144/neochn144.aspx?appinstanceid=381&amp;pubid=819">http://sitio.servel.cl/controls/neochannels/neo_ch144/neochn144.aspx?appinstanceid=381&amp;pubid=819</a> </li>
+<a href="https://www.servel.cl/ingresos-y-gastos-de-partidos/">ingresos y gastos de partidos</a> </li>
 <li>Votaciones en la Cámara de Diputados <a href="http://camara.cl/trabajamos/sala_votaciones.aspx">http://camara.cl/trabajamos/sala_votaciones.aspx</a> </li>
 <li>Votaciones en el Senado <a href="http://www.senado.cl/appsenado/index.php?mo=sesionessala&amp;ac=votacionSala&amp;legiini=462">http://www.senado.cl/appsenado/index.php?mo=sesionessala&amp;ac=votacionSala&amp;legiini=462</a> </li>
 <li>Tramitación de Proyectos de Ley en el Congreso <a href="http://sil.congreso.cl/pags/index.html">http://sil.congreso.cl/pags/index.html</a> </li>
