--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 <a href="https://www.servel.cl/ingresos-y-gastos-de-partidos/">ingresos y gastos de partidos</a> </li>
 <li>Votaciones en la Cámara de Diputados <a href="http://camara.cl/trabajamos/sala_votaciones.aspx">http://camara.cl/trabajamos/sala_votaciones.aspx</a> </li>
 <li>Votaciones en el Senado <a href="http://www.senado.cl/appsenado/index.php?mo=sesionessala&amp;ac=votacionSala&amp;legiini=462">http://www.senado.cl/appsenado/index.php?mo=sesionessala&amp;ac=votacionSala&amp;legiini=462</a> </li>
-<li>Tramitación de Proyectos de Ley en el Congreso <a href="http://sil.congreso.cl/pags/index.html">http://sil.congreso.cl/pags/index.html</a> </li>
+<li>Tramitación de Proyectos de Ley en el Congreso <a href="http://www.senado.cl/appsenado/templates/tramitacion/index.php">Tramitacion Senado</a> </li>
 <li>Reseñas Parlamentarias <a href="http://historiapolitica.bcn.cl/resenas_parlamentarias">http://historiapolitica.bcn.cl/resenas_parlamentarias</a> </li>
 <li>Historia Política Legislativa <a href="http://historiapolitica.bcn.cl/">http://historiapolitica.bcn.cl/</a> </li>
 <li>Datasets de Normas Jurídicas y Cargos Públicos <a href="http://datos.bcn.cl/es/documentacion/conjunto-de-datos">http://datos.bcn.cl/es/documentacion/conjunto-de-datos</a>
