--- a/index.html
+++ b/index.html
@@ -79,9 +79,9 @@
 <li>División Político Electoral <a href="http://siit2.bcn.cl/divisionelectoral/index.htm">http://siit2.bcn.cl/divisionelectoral/index.htm</a>
 </li>
 <li>Sistema de Información Territorial de la Biblioteca del Congreso Nacional 
-<a href="http://siit.bcn.cl/siit/ui/pages/Mapa.aspx?home=home">http://siit.bcn.cl/siit/ui/pages/Mapa.aspx?home=home</a><br>
+<a href="https://www.bcn.cl/siit">Sistema de Información Territorial de la Biblioteca del Congreso Nacional </a><br>
 </li>
-<li>Datos estadísticos por comuna de Chile (Censo) <a href="http://siit.bcn.cl/siit/ui/pages/Statistics.aspx">http://siit.bcn.cl/siit/ui/pages/Statistics.aspx</a> </li>
+<li>Datos estadísticos por comuna de Chile (Censo) <a href="http://www.ine.cl/estadisticas/demograficas-y-vitales">http://siit.bcn.cl/siit/ui/pages/Statistics.aspx</a> </li>
 <li>Datasets de Normas Jurídicas, Localidades y Cargos Públicos <a href="http://datos.bcn.cl/es/documentacion/conjunto-de-datos">http://datos.bcn.cl/es/documentacion/conjunto-de-datos</a>
 </li>
 </ul><h1>
