--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheet.css">
 
-    <title>Laberra Innovación </title>
+    <title>Erralab.Space Innovación  </title>
   </head>
 
   <body>
