--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheet.css">
 
-    <title>Erralab.Space Innovación  </title>
+    <title>Erralab.Space Innovación 2018  </title>
   </head>
 
   <body>
@@ -52,7 +52,7 @@
 </blockquote>
 </blockquote>
 
-<p>A continuación una lista de sets de datos.</p>
+<p>A continuación una lista de Sets de Datos.</p>
 
 <h1>
 <a name="-elecciones-votaciones-congreso-proyectos-de-ley-" class="anchor" href="#-elecciones-votaciones-congreso-proyectos-de-ley-"><span class="octicon octicon-link"></span></a>&gt; **Elecciones, votaciones Congreso, proyectos de ley **</h1>
@@ -89,10 +89,10 @@
 </h1>
 
 <ul>
-<li>Educación Superior <a href="http://www.mifuturo.cl/index.php/bases-de-datos">http://www.mifuturo.cl/index.php/bases-de-datos</a> </li>
-<li>Educación en general <a href="http://datos.gob.cl/categorias/ver/5">http://datos.gob.cl/categorias/ver/5</a> </li>
+<li>Educación Superior <a href="https://www.cned.cl/indices-educacion-superior"></a>INDICES Educación Superior pone a disposición de los usuarios datos estadísticos e información de la educación superior chilenas entre los años 2005 a la fecha. Actualizado a 2018 para pregrado y a 2017 para posgrado, específicamente</li>
+<li>Educación en general <a href="https://www.cned.cl/educacion-parvularia-y-escolar">Educacion Parvularia y Escolar</a> </li>
 <li>Georeferenciacion de escuelas y liceos <a href="http://datos.gob.cl/datasets/ver/448">http://datos.gob.cl/datasets/ver/448</a> I <a href="http://www.mineduc.cl/index1_int.php?id_portal=1&amp;id_seccion=3260&amp;id_contenido=13262">http://www.mineduc.cl/index1_int.php?id_portal=1&amp;id_seccion=3260&amp;id_contenido=13262</a> </li>
-<li>Presupuesto Nacional en Educación <a href="http://www.dipres.gob.cl/595/w3-propertyvalue-14437.html">http://www.dipres.gob.cl/595/w3-propertyvalue-14437.html</a> </li>
+<li>Presupuesto Nacional en Educación <a href="http://www.dipres.gob.cl/597/w3-multipropertyvalues-14437-24043.html">Presupuesto Ministerio de Educación2018</a> </li>
 <li>Subvenciones a Colegios Particulares Subvencionados <a href="http://www.mineduc.cl/transparencia/otras_transferencias.html">http://www.mineduc.cl/transparencia/otras_transferencias.html</a> </li>
 <li>Estadísticas Universitarias de Pregrado <a href="http://www.cned.cl/public/Secciones/SeccionIndicesEstadisticas/indices_estadisticas_sistema.aspx">http://www.cned.cl/public/Secciones/SeccionIndicesEstadisticas/indices_estadisticas_sistema.aspx</a> </li>
 <li>Estadísticas Universitarias Posgrado <a href="http://www.cned.cl/public/Secciones/SeccionIndicesEstadisticas/indices_estadisticas_posgrado.aspx">http://www.cned.cl/public/Secciones/SeccionIndicesEstadisticas/indices_estadisticas_posgrado.aspx</a><br>
