--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <header class="inner">
           <a id="forkme_banner" href="https://github.com/rriveros">View on GitHub</a>
 
-          <h1 id="project_title">Laberra Innovación </h1>
+          <h1 id="project_title">Erralab.Space Innovación </h1>
           <h2 id="project_tagline">Test de Aplicaciones - We.Boot</h2>
 
             <section id="downloads">
