--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
 <a name="-worldbank-open-data-catalog-" class="anchor" href="#-worldbank-open-data-catalog-"><span class="octicon octicon-link"></span></a>&gt; **Corfo # Innovacion Social Metropolitana **</h1>
 
 <ul>
-<li>Estadísticas y sets de datos de Chile <a href="http://data.worldbank.org/country/chile">http://data.worldbank.org/country/chile</a> I <a href="http://databank.bancomundial.org/data/views/reports/tableview.aspx">http://databank.bancomundial.org/data/views/reports/tableview.aspx</a>
+<li>Estadísticas y sets de datos de Chile <a href="http://data.worldbank.org/country/chile">http://data.worldbank.org/country/chile</a> 
 </li>
 </ul>
 
